--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-sass": "^4.3.0",
+    "gatsby-plugin-styled-components": "^4.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.32.10",
+    "styled-components": "^5.2.3"
   }
 }
