--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sass": "^4.3.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-plugin-styled-components": "^4.3.0",
+    "gatsby-remark-images": "^6.4.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^4.4.0",
